# geogram_predicates

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/in_circle_2d/: README.md  main.rs
examples/orient_2d/: README.md  main.rs
include/: geogram_ffi.h
include/geogram_predicates_psm/: Predicates_psm.cpp  Predicates_psm.h  README.MD
src/: geogram_ffi.cpp  lib.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
